# lastfm-rs-api

./: Cargo.toml
examples/: get_recent_tracks.rs
src/: lib.rs
src/authentication/: mod.rs  public.rs
src/error/: last_fm.rs  mod.rs  response.rs
src/page/: attributes.rs  mod.rs  serde.rs
src/request/user/: get_recent_tracks.rs  mod.rs
src/types/: image.rs  mod.rs  track.rs  user.rs
