[package]
name = "lastfm-rs-api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
reqwest = { version = "0.12.24", features = ["json"] }
ringbuffer = "0.16.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde-content = { version = "0.1.2", features = ["serde"] }
serde_json = "1.0.145"
serde_with = "3.15.0"
thiserror = "2.0.17"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
